styles/Our-works.css
.selected-clients {
    margin-bottom: 120px;
}

.works-list {
    display: flex;
    flex-direction: column;
    margin: 0 16px;
    margin-bottom: 46px;
}

.work-box {
    display: flex;
    flex-direction: column;
    margin-bottom: 24px;
}

.work-box-image img {
    position: relative !important;
    transition: transform 0.3s ease-in-out;
}

.selected-clients p {
    margin-bottom: 0;
}

.selected-clients-logos {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
    place-content: center center;
    margin: 0 16px;
    gap: 10px;
}

.selected-clients-logos-image img {
    position: relative !important;
    /* padding: 10px; */
}

.work-title {
    font-weight: 600;
    font-size: 16px;
}

@media only screen and (min-width: 480px) {
    .works-section {
        min-height: calc(100dvh);
        display: flex;
        flex-direction: column;
        /* This will push the credits to the bottom */
        justify-content: space-between;
    }

    .works-list {
        display: grid;
        grid-template-columns: 1fr 1fr;
        place-content: center center;
        gap: 16px;
        row-gap: 26px;
    }

    .work-box {
        width: 100%;
        height: auto;
        margin-bottom: 0;
    }

    .work-title {
        margin-top: 10px;
        font-weight: 600;
        font-size: 18px;
    }

    .work-box-image {
        overflow: hidden;
    }

    .work-box-image a img:hover {
        transform: scale(110%);
    }

    .selected-clients p {
        font-size: 36px;
        margin-top: 100px;
    }

    .selected-clients-logos {
        display: grid;
        grid-template-columns: repeat(6, 1fr);
        place-content: center center;
        /* Check this for sizing logos */
        margin: 0;
    }

    .selected-clients-logos-image {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;
        height: auto;
        padding: 10px;
    }

    .work-title:hover,
    .work-box-image:hover+.work-title {
        color: var(--yellow-bg);
    }

}

